test/netlist/error/unused-fun-param.bop
A<N>(a) = b
where
  b = not(a);
end where;

A(a) = b
where
  b = A<id>(a);
end where;
